[package]
name = "examples"
version = "0.0.0"
license = "Apache-2.0 OR MIT"
publish = false
edition = "2021"

[dev-dependencies]
bytesize = "1.3.0"
clap = "4.4"
fastrand = "2.0.1"
futures = "~0.3.30"
futures-lite = "2.1.0"
glommio = { path = "../glommio" }
hyper = { version = "1", features = ["full"] }
num_cpus = "1.16.0"
sys-info = "~0.9.1"
yansi = "~0.5.1"

[[example]]
name = "echo"
path = "echo.rs"

[[example]]
name = "hello_world"
path = "hello_world.rs"

[[example]]
name = "ping_pong"
path = "ping_pong.rs"

[[example]]
name = "defer"
path = "defer.rs"

[[example]]
name = "cooperative_preempt"
path = "cooperative_preempt.rs"

[[example]]
name = "deadline"
path = "deadline_writer.rs"

[[example]]
name = "storage"
path = "storage.rs"

[[example]]
name = "channel_mesh"
path = "sharding.rs"

[[example]]
name = "hyper"
path = "hyper.rs"

[[example]]
name = "gate"
path = "gate.rs"
